# OsuMapDownloader

./: .gitignore  Cargo.toml  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
src/: beatmap_info.rs  config.rs  download_type.rs  main.rs  map_downloader.rs  since_date.rs
src/nativeMain/kotlin/: Main.kt  MapDownloader.kt
src/nativeMain/kotlin/model/: BeatMapInfo.kt  Config.kt  OsuMode.kt  SinceTime.kt
