[package]
name = "OsuMapDownloader"
version = "1.0.0"
edition = "2024"
description = "osu! beatmap downloader — fetch beatmaps from osu! API and download from sayobot CDN"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "time", "sync"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
indicatif = "0.17"
console = "0.15"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 2
lto = true
